# rigel

./: CMakeLists.txt  README.md
rigel/: CMakeLists.txt
rigel/core/: abort_on_expiry.hh  abort_source.hh  abortable_fifo.hh  alien.cc  alien.hh  app-template.cc  app-template.hh  bitops.hh  byteorder.hh  cgroup.hh  checked_ptr.hh  circular_buffer.hh  condition-variable.cc  condition-variable.hh  coroutine.hh  distributed.hh  do_with.hh  dpdk_rte.cc  exception_hacks.cc  execution_stage.cc  execution_stage.hh  expiring_fifo.hh  fair_queue.cc  fair_queue.hh  file-impl.hh  file.cc  file.hh  fsnotify.cc  fsnotify.hh  fsqual.cc  fsqual.hh  fstream.cc  fstream.hh  future-util.cc  future-util.hh  future.cc  future.hh  gate.hh  idle_cpu_handler.hh  io_intent.hh  (+85 more)
rigel/coroutine/: all.hh  as_future.hh  exception.hh  generator.hh  maybe_yield.hh  parallel_for_each.hh  switch_to.hh
rigel/fiber/: context.cc  context.h
rigel/framework/: numa_utils.cc  numa_utils.h
rigel/http/: api_docs.cc  api_docs.hh  chunk_parsers.rl  client.cc  client.hh  common.cc  common.hh  exception.hh  file_handler.cc  file_handler.hh  function_handlers.hh  handlers.hh  httpd.cc  httpd.hh  json_path.cc  json_path.hh  matcher.cc  matcher.hh  matchrules.hh  mime_types.cc  mime_types.hh  reply.cc  reply.hh  request.cc  request.hh  request_parser.rl  response_parser.rl  routes.cc  routes.hh  short_streams.hh  transformers.cc  transformers.hh  url.cc  url.hh
rigel/json/: formatter.cc  formatter.hh  json_elements.cc  json_elements.hh
rigel/memory/: CMakeLists.txt  buffer_attributes.cc  buffer_attributes.h  constans.h  memory_type.h  object_pool.h  object_pool_inl.h  object_pool_test.cc  pinned_memory_manager.cc  pinned_memory_manager.h
rigel/metrics/: base_stats_reporter.h  buckets.cc  buckets.h  buckets_calculator.cc  buckets_calculator.h  buckets_iterator.cc  buckets_iterator.h  capabilities.h  capable_of.cc  capable_of.h  counter.h  counter_impl.cc  counter_impl.h  gauge.h  gauge_impl.cc  gauge_impl.h  histogram.h  histogram_bucket.cc  histogram_bucket.h  histogram_impl.cc  histogram_impl.h  noop_stats_reporter.cc  noop_stats_reporter.h  scope.h  scope_builder.cc  scope_builder.h  scope_impl.cc  scope_impl.h  stats_reporter.h  stopwatch.cc  stopwatch.h  stopwatch_recorder.h  timer.h  timer_impl.cc  timer_impl.h
rigel/net/: api.hh  arp.cc  arp.hh  byteorder.hh  config.cc  config.hh  dhcp.cc  dhcp.hh  dns.cc  dns.hh  dpdk.cc  dpdk.hh  ethernet.cc  ethernet.hh  inet_address.cc  inet_address.hh  ip.cc  ip.hh  ip_checksum.cc  ip_checksum.hh  ipv4_address.hh  ipv6_address.hh  native-stack-impl.hh  native-stack.cc  native-stack.hh  net.cc  net.hh  packet-data-source.hh  packet-util.hh  packet.cc  packet.hh  posix-stack.cc  posix-stack.hh  proxy.cc  proxy.hh  socket_address.cc  socket_defs.hh  stack.cc  stack.hh  tcp-stack.hh  (+9 more)
rigel/rpc/: lz4_compressor.cc  lz4_compressor.hh  lz4_fragmented_compressor.cc  rpc.cc  rpc.hh  (+4 more)
(+277 files in other folders)
